[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
parallel = true
branch = true
source = ["pymaven"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
fail_under = 80.0
show_missing = true

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true

known_first_party="pymaven"
known_third_party=["lxml", "pymaven", "requests", "setuptools", "six"]

[tool.towncrier]
    package = "pymaven"
    package_dir = "src"
    filename = "CHANGELOG.rst"
    template = "changelog.d/towncrier_template.rst"
    issue_format = "`#{issue} <https://github.com/sassoftware/pymaven/issues/{issue}>`_"
    directory = "changelog.d"
    title_format = "{version} - {project_date}"
    underlines = ["-", "^"]

    [[tool.towncrier.section]]
        path = ""

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backward-incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "build"
        name = "Build"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "chore"
        name = "Chores"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feat"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "fix"
        name = "Fixed"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "tests"
        name = "Tests"
        showcontent = true
