[metadata]
name = pymaven
author = Walter Scheper
author_email = Walter.Scheper@sas.com
summary = Python access to maven
description-file = README.md
home-page = https://github.com/sassoftware/pymaven
license = Apache-2
license_file = LICENSE

[extras]
development =
    detox
    epdb
    flake8
    isort
    yapf

[bdist_wheel]
universal = 1

[flake8]
max_line_length = 120
exclude = tests/*,*/migrations/*,*/south_migrations/*

[coverage:paths]
source =
   pymaven
   */site-packages/pymaven

[coverage:run]
branch = true
source = pymaven
parallel = true

[coverage:report]
show_missing = true
precision = 2

[tool:pytest]
norecursedirs =
    .eggs
    .env
    .git
    .tox
    build
    dist
    migrations
    south_migrations
python_files =
    test_*.py
    *_test.py
    tests.py

[isort]
force_single_line = true
from_first = true
line_length = 120
known_first_party = pymaven
default_section = THIRDPARTY
not_skip = __init__.py
skip = migrations, south_migrations
